# PatchMatch

./: .gitignore  CMakeLists.txt  README.txt  Readme.md  analize_comparison.py  check_for_cuda.lua  compare_algorithms.lua  compare_patchmatch_performance.lua  config.py  main.py  make.bat  patch2vec.lua  patch2vec_image.lua  setup.py  test_inpaint.lua
include/: lua_inpaint.h  nearestneighborfield.h
patchmatch2.1/: allegro_emu.cpp  allegro_emu.h  build_unix.sh  inpaint.cpp  inpaint.h  knn.cpp  knn.h  lua_inpaint.cpp  lua_inpaint.h  mexutil.mex  nn.cpp  nn.h  nnmex.cpp  nnmex.mex  patch.h  patch2vec.h  pm_minimal.cpp
source/: c_pyinpaint.pxd  inpaint.c  lua_inpaint.c  main.c  maskedimage.c  nearestneighborfield.c  pyinpaint.c  pyinpaint.pyx  pywrapped_inpaint.c  pywrapped_inpaint.h  wrapped_inpaint.c  wrapped_inpaint.h
