cmake_minimum_required(VERSION 2.8)
project(PatchMatch)
find_package(OpenCV REQUIRED)
find_package(Lua51)
FIND_PACKAGE(Torch REQUIRED)

if (NOT LUA51_FOUND)
	message(FATAL_ERROR "Could not find lua")
endif (NOT LUA51_FOUND)

if (NOT TORCH_FOUND)
	# message(FATAL_ERROR "Must provide torch repository path")
endif (NOT TORCH_FOUND)
file (TO_CMAKE_PATH "/home/ron/git/torch/install/include" TH_INCLUDE_PATH)

add_library(luainpaint SHARED "source//inpaint.c" "source//nearestneighborfield.c" "source//maskedimage.c" "source//lua_inpaint.c" "source//wrapped_inpaint.c")
target_include_directories(luainpaint PRIVATE "include")
target_include_directories(luainpaint PRIVATE ${TH_INCLUDE_PATH})
target_include_directories(luainpaint PRIVATE ${LUA_INCLUDE_DIR}//lua5.1)
# target_link_libraries(luainpaint ${OpenCV_LIBS} "/usr/lib/liblua.so.5.1")
target_link_libraries(luainpaint ${OpenCV_LIBS})
target_compile_definitions(luainpaint PRIVATE DPNN_PATCH_DISTANCE)
